--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>LiCoEval Leaderboard</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./icons/osslab.png" type="image/x-icon">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js"></script>
 </head>
 <body>
 <main>
