add the table content

--- a/index.html
+++ b/index.html
@@ -36,6 +36,82 @@
 <div class="graph">
     <canvas id="llmChart"></canvas>
 </div>
+
+<div class="leaderboard-table">
+    <table>
+        <thead>
+        <tr>
+            <th>Model</th>
+            <th>LiCoEval Score</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td colspan="2" style="font-weight: bold;">General LLM</td>
+        </tr>
+        <tr>
+            <td>GPT-3.5-Turbo</td>
+            <td>0.373</td>
+        </tr>
+        <tr>
+            <td>GPT-4-Turbo</td>
+            <td>0.376</td>
+        </tr>
+        <tr>
+            <td>GPT4o</td>
+            <td>0.385</td>
+        </tr>
+        <tr>
+            <td>Gemini-1.5-Pro</td>
+            <td>0.317</td>
+        </tr>
+        <tr>
+            <td>Claude-3.5-Sonnet</td>
+            <td>0.571</td>
+        </tr>
+        <tr>
+            <td>Qwen2-7B-Instruct</td>
+            <td>0.985</td>
+        </tr>
+        <tr>
+            <td>GLM-4-9B-Chat</td>
+            <td>1.0</td>
+        </tr>
+        <tr>
+            <td>Llama-3-8B-Instruct</td>
+            <td>0.714</td>
+        </tr>
+        <tr>
+            <td colspan="2" style="font-weight: bold;">Code LLM</td>
+        </tr>
+        <tr>
+            <td>DeepSeek-Coder-V2</td>
+            <td>0.142</td>
+        </tr>
+        <tr>
+            <td>CodeQwen1.5-7B-Chat</td>
+            <td>0.781</td>
+        </tr>
+        <tr>
+            <td>StarCoder2-15B-Instruct</td>
+            <td>0.780</td>
+        </tr>
+        <tr>
+            <td>Codestral-22B-v0.1</td>
+            <td>0.360</td>
+        </tr>
+        <tr>
+            <td>CodeGemma-7B-IT</td>
+            <td>0.809</td>
+        </tr>
+        <tr>
+            <td>WizardCoder-Python-13B</td>
+            <td>0.153</td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
 <script src="script.js"></script>
 </body>
 </html>
