draw the second graph

--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
     </div>
 </main>
 <div class="graph">
-    <canvas id="llmChart"></canvas>
+    <canvas id="CoLiChart"></canvas>
+</div>
+<div class="graph">
+    <canvas id="HumanChart"></canvas>
 </div>
 
 <div class="leaderboard-table">
