fix potential conflicts in JavaScript

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 </main>
 <div class="graph">
-    <canvas id="CoLiChart"></canvas>
+    <canvas id="LiCoChart"></canvas>
 </div>
 <div class="graph">
     <canvas id="HumanChart"></canvas>
