fix small inconsistencies

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="title-introduction">
     <h1>LiCoEval Leaderboard</h1>
     <p>A benchmark to evaluate the ability of LLMs to provide accurate license information for their generated
-        code.</p>
+        code</p>
     <section class="benchmark-link">
         <div class="benchmark-link-item">
             <a href="https://github.com/osslab-pku/LiCoEval">
