--- a/index.html
+++ b/index.html
@@ -45,72 +45,69 @@
 
         <div class="leaderboard-table">
             <table>
-                <thead>
+                <thead class="first-line">
                 <tr>
-                    <th>Model</th>
-                    <th>LiCoEval Score</th>
+                    <th></th>
+                    <th>Models</th>
+                    <th>LiCoEval Scores</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td colspan="2" style="font-weight: bold;">General LLM</td>
-                </tr>
-                <tr>
+                <tr class="general">
+                    <td rowspan="8" style="font-weight: bold;">General LLM</td>
                     <td>GPT-3.5-Turbo</td>
                     <td>0.373</td>
                 </tr>
-                <tr>
+                <tr class="general">
                     <td>GPT-4-Turbo</td>
                     <td>0.376</td>
                 </tr>
-                <tr>
+                <tr class="general">
                     <td>GPT4o</td>
                     <td>0.385</td>
                 </tr>
-                <tr>
+                <tr class="general">
                     <td>Gemini-1.5-Pro</td>
                     <td>0.317</td>
                 </tr>
-                <tr>
+                <tr class="general">
                     <td>Claude-3.5-Sonnet</td>
                     <td>0.571</td>
                 </tr>
-                <tr>
+                <tr class="general">
                     <td>Qwen2-7B-Instruct</td>
                     <td>0.985</td>
                 </tr>
-                <tr>
+                <tr class="general">
                     <td>GLM-4-9B-Chat</td>
                     <td>1.0</td>
                 </tr>
-                <tr>
+                <tr class="general">
                     <td>Llama-3-8B-Instruct</td>
                     <td>0.714</td>
                 </tr>
-                <tr>
-                    <td colspan="2" style="font-weight: bold;">Code LLM</td>
-                </tr>
-                <tr>
+                <tr class="code">
+                    <td rowspan="6" style="font-weight: bold;">Code LLM</td>
                     <td>DeepSeek-Coder-V2</td>
                     <td>0.142</td>
                 </tr>
-                <tr>
+                <tr class="code">
                     <td>CodeQwen1.5-7B-Chat</td>
                     <td>0.781</td>
                 </tr>
-                <tr>
+                <tr class="code">
                     <td>StarCoder2-15B-Instruct</td>
                     <td>0.780</td>
                 </tr>
-                <tr>
+                <tr class="code">
                     <td>Codestral-22B-v0.1</td>
                     <td>0.360</td>
                 </tr>
-                <tr>
+                <tr class="code">
                     <td>CodeGemma-7B-IT</td>
                     <td>0.809</td>
                 </tr>
-                <tr>
+                <tr class="code">
                     <td>WizardCoder-Python-13B</td>
                     <td>0.153</td>
                 </tr>
@@ -127,71 +124,68 @@
         <div class="leaderboard-table">
             <table>
                 <thead>
-                <tr>
-                    <th>Model</th>
-                    <th>HumanEval</th>
+                <tr class="first-line">
+                    <th></th>
+                    <th>Models</th>
+                    <th>HumanEval Scores</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td colspan="2" style="font-weight: bold;">General LLM</td>
-                </tr>
-                <tr>
+                <tr class="general">
+                    <td rowspan="8" style="font-weight: bold;">General LLM</td>
                     <td>GPT-3.5-Turbo</td>
                     <td>72.6</td>
                 </tr>
-                <tr>
+                <tr class="general">
                     <td>GPT-4-Turbo</td>
                     <td>85.4</td>
                 </tr>
-                <tr>
+                <tr class="general">
                     <td>GPT4o</td>
                     <td>90.2</td>
                 </tr>
-                <tr>
+                <tr class="general">
                     <td>Gemini-1.5-Pro</td>
                     <td>71.9</td>
                 </tr>
-                <tr>
+                <tr class="general">
                     <td>Claude-3.5-Sonnet</td>
                     <td>92.0</td>
                 </tr>
-                <tr>
+                <tr class="general">
                     <td>Qwen2-7B-Instruct</td>
                     <td>79.9</td>
                 </tr>
-                <tr>
+                <tr class="general">
                     <td>GLM-4-9B-Chat</td>
                     <td>71.8</td>
                 </tr>
-                <tr>
+                <tr class="general">
                     <td>Llama-3-8B-Instruct</td>
                     <td>62.2</td>
                 </tr>
-                <tr>
-                    <td colspan="2" style="font-weight: bold;">Code LLM</td>
-                </tr>
-                <tr>
+                <tr class="code">
+                    <td rowspan="6" style="font-weight: bold;">Code LLM</td>
                     <td>DeepSeek-Coder-V2</td>
                     <td>90.2</td>
                 </tr>
-                <tr>
+                <tr class="code">
                     <td>CodeQwen1.5-7B-Chat</td>
                     <td>83.5</td>
                 </tr>
-                <tr>
+                <tr class="code">
                     <td>StarCoder2-15B-Instruct</td>
                     <td>72.6</td>
                 </tr>
-                <tr>
+                <tr class="code">
                     <td>Codestral-22B-v0.1</td>
                     <td>61.5</td>
                 </tr>
-                <tr>
+                <tr class="code">
                     <td>CodeGemma-7B-IT</td>
                     <td>56.1</td>
                 </tr>
-                <tr>
+                <tr class="code">
                     <td>WizardCoder-Python-13B</td>
                     <td>64.0</td>
                 </tr>
@@ -247,12 +241,10 @@
         </tr>
         </tbody>
     </table>
+    <p>OSSlab-PKU ❤️ Open Source</p>
+    <p>OSSlab-PKU ❤️ LLMs</p>
 </div>
 
-<footer>
-    <p>OSSlab-PKU ❤️ Open Source</p>
-    <p>OSSlab-PKU ❤️ LLM</p>
-</footer>
 <script src="script.js"></script>
 </body>
 </html>
