--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
 <div class="title-introduction">
-    <h1>LiCoEval Leaderboard</h1>
+    <h1>
+        <img src="icons/left-wheat.jpeg" alt="wheat" style="width: 50px; height: 100px; vertical-align: middle;">
+        LiCoEval Leaderboard
+        <img src="icons/right-wheat.jpeg" alt="wheat" style="width: 50px; height: 100px; vertical-align: middle;">
+    </h1>
     <p>A benchmark to evaluate the ability of LLMs to provide accurate license information for their generated
         code</p>
     <section class="benchmark-link">
